# Study

./: README.md
C++/Algorithms/: CMakeLists.txt
C++/Algorithms/src/: CMakeLists.txt  main.cpp
C++/Algorithms/src/data_structures/: b_tree.cpp  b_tree.h  bin_search_tree.cpp  bin_search_tree.h  bloom_filter.h  cartesian_tree.cpp  cartesian_tree.h  data_structures.cpp  data_structures.h  heaps.cpp  heaps.h  prefix_tree.cpp  prefix_tree.h  rb_tree.cpp  rb_tree.h  splay_tree.cpp  splay_tree.h
C++/Algorithms/src/graphs/: graph.cpp  graph.h
C++/Algorithms/src/practice/: practice.cpp  practice.h
C++/Algorithms/src/sorting/: sorting.cpp  sorting.h
C++/Algorithms/src/unit_test/: unit_test.cpp  unit_test.h
C++/Yandex/: .clang-format  CMakeLists.txt  TODO
C++/Yandex/src/: .clang-format  CMakeLists.txt  main.cpp
C++/Yandex/src/0_white_belt/week_1/: week_1.cpp
C++/Yandex/src/0_white_belt/week_2/: week_2.cpp  week_2.h
C++/Yandex/src/0_white_belt/week_3/: week_3.cpp  week_3.h
C++/Yandex/src/0_white_belt/week_4/: week_4.cpp  week_4.h
C++/Yandex/src/0_white_belt/week_5/: week_5.cpp  week_5.h
C++/Yandex/src/1_yellow_belt/week_1/: week_1.cpp  week_1.h
C++/Yandex/src/1_yellow_belt/week_2/: week_2.cpp  week_2.h
C++/Yandex/src/1_yellow_belt/week_3/: week_3.cpp  week_3.h
C++/Yandex/src/1_yellow_belt/week_4/: week_4.cpp  week_4.h
C++/Yandex/src/1_yellow_belt/week_5/: week_5.cpp  week_5.h
C++/Yandex/src/1_yellow_belt/week_6/: condition_parser.cpp  database.cpp  database_test.cpp  node.h  token.cpp
C++/Yandex/src/2_red_belt/search_system/: iterator_range.h  parse.cpp  parse.h  search_server.cpp  search_server.h
C++/Yandex/src/2_red_belt/week_1/: week_1.cpp  week_1.h
C++/Yandex/src/2_red_belt/week_2/: week_2.cpp  week_2.h
C++/Yandex/src/2_red_belt/week_3/: week_3.h
C++/Yandex/src/2_red_belt/week_4/: week_4.cpp  week_4.h
C++/Yandex/src/2_red_belt/week_5/: week_5.cpp  week_5.h
C++/Yandex/src/3_brown_belt/1_AssociativeContainers/: AssociativeContainers.cpp  AssociativeContainers.h
C++/Yandex/src/3_brown_belt/2_NamespacesAndThisPtr/: NamespacesAndThisPtr.cpp  NamespacesAndThisPtr.h  ini.cpp  json.cpp  json.h  xml.cpp  xml.h
C++/Yandex/src/3_brown_belt/2_NamespacesAndThisPtr/geo/: game_object.h  geo2d.cpp  geo2d.h
C++/Yandex/src/3_brown_belt/2_NamespacesAndThisPtr/ini/: ini.cpp  ini.h
C++/Yandex/src/3_brown_belt/2_NamespacesAndThisPtr/xml/: xml.cpp  xml.h
C++/Yandex/src/3_brown_belt/3_ConstQualifierAndUniquePtr/: ConstQualifierAndUniquePtr.cpp  ConstQualifierAndUniquePtr.h
C++/Yandex/src/time_logger/: time_logger.cpp
C++/Yandex/src/unit_test/: unit_test.cpp  unit_test.h
C++/Yandex/src/week_1/: HEADER_WEEK_1.CPP  header_week_1.h
C++/Yandex/src/week_2/: header_week_2.h
C++/Yandex/src/week_3/: week_3.h
C++/Yandex/src/week_4/: week_4.cpp  week_4.h
C++/Yandex/src/week_5/: week_5.cpp  week_5.h
C++/Yandex/src/week_6/: condition_parser_test.cpp  database.h  database_test.cpp  date.cpp  date.h  node.cpp  test_runner.h
C++/Yandex/time_logger/: CMakeLists.txt  time_logger.h
C++/Yandex/unit_test/: CMakeLists.txt  unit_test.cpp  unit_test.h
Machine Learning/Create your own NW/: read_mnist_data.ipynb  sigma_nw.ipynb
Machine Learning/Data Camp ML/: stats_eda.ipynb  supervised_learning.ipynb
Machine Learning/Data Camp ML/.ipynb_checkpoints/: stats_eda-checkpoint.ipynb  supervised_learning-checkpoint.ipynb
Machine Learning/Stepic/computer_vision/: classification.py  main.py
Machine Learning/Yandex ML/: week_1.ipynb  week_2.ipynb  week_3.ipynb  week_4.ipynb  week_6.ipynb
Machine Learning/Yandex ML/.ipynb_checkpoints/: week_1-checkpoint.ipynb  week_2-checkpoint.ipynb  week_3-checkpoint.ipynb  week_4-checkpoint.ipynb  week_5-checkpoint.ipynb
Machine Learning/Yandex ML/DOTA competition/: final-statement.ipynb  (+3 more)
Machine Learning/Yandex_specialization/: desicion_tree.py  general_notes.ipynb  main_ml_steps.ipynb  my_decision_tree.py  my_one_layer_nn.py  trees.ipynb
Machine Learning/deep_learning/: deep_nn.py  my_logistic_regression.py  single_layer_nn.py
Math Stat/: 2_point_estimation.ipynb  3_ms_confiednce_interval.ipynb  4_ms_hypothesis.ipynb  5_hypoth_homogeneity.ipynb  6_eligibility_criteria.ipynb
Math Stat/.ipynb_checkpoints/: 1_descriptive_statistics-checkpoint.ipynb  2_point_estimation-checkpoint.ipynb  3_ms_confiednce_interval-checkpoint.ipynb  4_ms_hypothesis-checkpoint.ipynb  5_hypoth_homogeneity-checkpoint.ipynb  6_eligibility_criteria-checkpoint.ipynb  7_lin_regression-checkpoint.ipynb
Math Stat/data/: regr.txt  rich_people.txt
Num Methods/: 1_optimization_tasks.ipynb
Num Methods/.ipynb_checkpoints/: 1_optimization_tasks-checkpoint.ipynb
(+32 files in other folders)
